[package]
name = "honeycomb"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
speedy2d = "1.12.0"
rand = "0.8.5"
itertools = "0.11.0"

[[example]]
name = "a_star"
path = "examples/a_star.rs"

[[example]]
name = "grid_demo"
path = "examples/grid_demo.rs"

[[example]]
name = "custom_data"
path = "examples/custom_data.rs"

[[example]]
name = "pathfinding"
path = "examples/pathfinding.rs"